# omnifocus-py

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  config.json.example  manifest.json  package-lock.json  package.json  pyproject.toml  test-mcp.js  test-omnifocus.js
docs/plans/: 2026-03-19-split-library-cli.md
omnifocus/: __init__.py  cli.py  client.py  models.py  server.py
omnifocus_mcp/: __init__.py  client.py  server.py
plugin/claude-code/: .mcp.json
plugin/claude-code/.claude-plugin/: plugin.json
plugin/claude-code/skills/omnifocus/: SKILL.md
src/: index.js  meta-server.js  omnifocus.js
src/omnifocus/: __init__.py
src/omnifocus_cli/: __init__.py  cli.py
tests/: test_cli.py  test_models.py
