[project]
name = "omnifocus-py"
version = "3.0.0"
description = "Python library, CLI, and MCP server for OmniFocus"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]
license = "MIT"
authors = [{ name = "Nelson Love" }]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
omnifocus = "omnifocus.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnifocus"]
